Practicas CSS - ejercicios 4geeks

--- a/exercises/10-static-layout/styles.css
+++ b/exercises/10-static-layout/styles.css
@@ -1,5 +1,8 @@
 /* your code here */
-
+.secondWrapper {
+	display: flex;
+	gap: 10px;
+}
 /**************************************
 DON'T CHANGE ANYTHING AFTER THIS LINE
 **************************************/
@@ -17,7 +20,7 @@ body {
 	color: #fff;
 	font-family: Helvetica;
 	text-align: center;
-	margin: 0;
+	margin: 20px;
 }
 
 header,
@@ -26,10 +29,12 @@ section {
 	border: 1px solid rgba(255, 255, 255, 0.8);
 	margin-bottom: 10px;
 	border-radius: 3px;
+	width: 80%;
 }
 
 header {
 	padding: 10px 0;
+	width: 100%;
 }
 
 nav,
